# tauri_zhuiju

./: README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
server/: main.go  package-lock.json  package.json  server.js
src/: App.vue  main.js
src-tauri/: .gitignore  Cargo.toml  log.txt  tauri.conf.json
src-tauri/src/: main.rs
src/api/: category.js  video.js
src/components/: MyBreadCrumb.vue  MyPagination.vue
src/components/ui/toast/: ToastViewport.vue
src/config/: index.js
src/router/: index.js
src/store/: index.js
src/utils/: astar.js  push.js  request.js  storage.js
src/views/: detail.vue  index.vue  test.vue
