[package]
name = "digital"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
warp = "0.3"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
