[package]
name = "追剧"
version = "1.0.4"
description = "追剧"
authors = ["ningbnii"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all", "process-command-api"] }
winapi = { version = "0.3", features = ["winuser"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cfg-if = "1"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
